infrastructure/terraform/aws/network/vpc.tf
resource "aws_vpc" "this" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support   = var.enable_dns_support

  tags = {
    Name = "${var.service_name}-${module.aws_registry.deploy_context}-vpc"
  }
}
